--- a/package.json
+++ b/package.json
@@ -39,6 +39,9 @@
   "dependencies": {
     "chart.js": "^2.9.4",
     "cheerio": "^1.0.0-rc.3",
+    "fetch-mock": "^9.10.7",
+    "jquery": "^3.5.1",
+    "node-fetch": "^2.6.1",
     "normalize.css": "^8.0.1"
   }
 }
