--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "@testing-library/react": "^11.1.1",
     "@testing-library/user-event": "^12.2.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "chart.js": "^2.9.4",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
+    "react-chartjs-2": "^2.11.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
