--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "fgac",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://wwu-cptr220-a20.github.io/project-yourusername/",
+  "homepage": "https://wwu-cptr220-a20.github.io/project-cherbel/",
   "dependencies": {
     "@babel/plugin-transform-react-jsx": "^7.12.5",
     "@testing-library/jest-dom": "^5.11.5",
@@ -16,15 +16,15 @@
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "gh-pages": "^3.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "npm run build&&gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
