--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
     "@testing-library/user-event": "^12.2.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "chart.js": "^2.9.4",
+    "gh-pages": "^3.1.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-chartjs-2": "^2.11.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.0",
-    "gh-pages": "^3.1.0"
+    "react-scripts": "4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
